feat(theme): add dark mode toggle with NgRx and localStorage persistence

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
-    <h1><a href="">Where in the world?</a></h1>
+    <h1><a routerLink="/">Where in the world?</a></h1>
     <app-theme-toggler></app-theme-toggler>
 </header>
