--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,6 +11,7 @@ header {
         a {
             font-size: var(--font-preset-4-size);
             font-weight: 900;
+            color: var(--primary-text-color);
         }
     }
 }
