--- a/src/app/components/theme-toggler/theme-toggler.component.html
+++ b/src/app/components/theme-toggler/theme-toggler.component.html
@@ -1,4 +1,8 @@
-<div class="theme-toggle">
-    <img src="assets/images/outline-moon.svg" alt="moon icon">
+<div class="theme-toggle" (click)="toggleTheme()">
+    <div>
+      <img src="assets/images/outline-moon.svg" alt="moon icon" class="icon" *ngIf="(theme$ | async) === 'light'">
+      <img src="assets/images/moon.svg" alt="sun icon" class="icon" *ngIf="(theme$ | async) === 'dark'">
+    </div>
     <span>Dark Mode</span>
-</div>
+  </div>
+  
