--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+// src/styles.scss
 @use './styles/variables' as *;
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
