feat: Add countries list to list all countries

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,6 @@
 // src/styles.scss
-@use './styles/variables' as *;
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-
-
+@use "./styles/variables" as *;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   margin: 0;
