--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,18 +1,16 @@
-@use '../../../styles/variables' as *;
-@use '../../../styles/mixins' as *;
+@use "../../../styles/variables" as *;
+@use "../../../styles/mixins" as *;
 
 header {
-    @include flex(row, space-between, center);
-    background-color: var(--header-bg-color);
-    padding: 1.5rem 1rem;
+  @include flex(row, space-between, center);
+  background-color: var(--header-bg-color);
+  padding: 1.5rem 1rem;
 
-    h1 {
-
-        a {
-            font-size: var(--font-preset-4-size);
-            font-weight: 900;
-            color: var(--primary-text-color);
-        }
+  h1 {
+    a {
+      font-size: var(--font-preset-4-size);
+      font-weight: 900;
+      color: var(--primary-text-color);
     }
+  }
 }
-
