--- a/src/app/components/country-card/country-card.component.scss
+++ b/src/app/components/country-card/country-card.component.scss
@@ -1,12 +1,16 @@
 .country-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 2rem;
-  padding: 5rem;
+  padding: 3rem;
+
+  @media screen and (min-width: 768px) {
+    padding: 5rem;
+  }
 }
 
 .country-card {
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   border-radius: 5px;
   background-color: var(--header-bg-color);
@@ -28,16 +32,15 @@
     padding: 1.5rem;
 
     h2 {
-        margin-bottom: 1rem;
-        font-weight: extra-bold;
-        font-size: 1.25rem;
+      margin-bottom: 1rem;
+      font-weight: 500;
+      font-size: 1.1rem;
     }
 
     p {
-        margin-bottom: 0.5rem;
-        font-size: 0.875rem;
-        font-weight: 200;
-        
+      margin-bottom: 0.5rem;
+      font-size: 0.875rem;
+      font-weight: 200;
     }
   }
 }
