--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,6 +6,10 @@ header {
   background-color: var(--header-bg-color);
   padding: 1.5rem 1rem;
 
+  @media screen and (min-width: 768px) {
+    padding: 1.5rem 5rem;
+  }
+
   h1 {
     a {
       font-size: var(--font-preset-4-size);
