--- a/src/app/components/country-card/country-card.component.scss
+++ b/src/app/components/country-card/country-card.component.scss
@@ -2,10 +2,10 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 2rem;
-  padding: 3rem;
+  padding: 1rem 3rem;
 
   @media screen and (min-width: 768px) {
-    padding: 5rem;
+    padding: 4rem;
   }
 }
 
