feat: display message when no countries match search or filter

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
-<app-search></app-search>
-<app-filter-region></app-filter-region>
+<div class="filters">
+    <app-search></app-search>
+    <app-filter-region></app-filter-region>
+</div>
 <app-country-card></app-country-card>
