--- a/src/app/components/country-card/country-card.component.html
+++ b/src/app/components/country-card/country-card.component.html
@@ -1,24 +1,30 @@
 <div *ngIf="loading$ | async" class="loading">Loading countries...</div>
 
-<!-- <div *ngIf="error$ | async as error" class="error">Error: {{ error }}</div> -->
-
 <section class="country-list" *ngIf="countries$ | async as countries">
-  <article
-    *ngFor="let country of countries"
-    class="country-card"
-    (click)="viewDetails(country.cca3)"
-  >
-    <img
-      *ngIf="country?.flags?.png"
-      [src]="country.flags.png"
-      [alt]="country.name.common + ' flag'"
-    />
+  <ng-container *ngIf="countries.length > 0; else noCountries">
+    <article
+      *ngFor="let country of countries"
+      class="country-card"
+      (click)="viewDetails(country.cca3)"
+    >
+      <img
+        *ngIf="country?.flags?.png"
+        [src]="country.flags.png"
+        [alt]="country.name.common + ' flag'"
+      />
 
-    <div class="country-info">
-      <h2>{{ country.name.common || "Unknown Country" }}</h2>
-      <p><strong>Population:</strong> {{ country.population | number }}</p>
-      <p><strong>Region:</strong> {{ country.region || "N/A" }}</p>
-      <p><strong>Capital:</strong> {{ country.capital?.[0] || "N/A" }}</p>
-    </div>
-  </article>
+      <div class="country-info">
+        <h2>{{ country.name.common || "Unknown Country" }}</h2>
+        <p><strong>Population:</strong> {{ country.population | number }}</p>
+        <p><strong>Region:</strong> {{ country.region || "N/A" }}</p>
+        <p><strong>Capital:</strong> {{ country.capital?.[0] || "N/A" }}</p>
+      </div>
+    </article>
+  </ng-container>
 </section>
+
+<ng-template class="no-results" #noCountries>
+  <p class="no-results" role="status" aria-live="polite">
+    No countries found. Try adjusting your search or region filter.
+  </p>
+</ng-template>
