--- a/src/app/components/filter-region/filter-region.component.html
+++ b/src/app/components/filter-region/filter-region.component.html
@@ -1,8 +1,7 @@
 <div class="region-filter">
-    <label for="region-select">Filter by Region</label>
     <select id="region-select" [formControl]="regionControl">
-      <option value="">All Regions</option>
-      <option *ngFor="let region of regions" [value]="region">
+      <option value="">Filter by Region</option>
+      <option class="region-option" *ngFor="let region of regions" [value]="region">
         {{ region }}
       </option>
     </select>
