--- a/src/app/components/filter-region/filter-region.component.scss
+++ b/src/app/components/filter-region/filter-region.component.scss
@@ -3,11 +3,21 @@
     flex-direction: column;
     gap: 0.5rem;
     font-size: 1rem;
+    margin: 1rem;
+    width: 170px;
   
     select {
-      padding: 0.5rem;
-      border-radius: 4px;
-      border: 1px solid #ccc;
+      padding: 1rem;
+      border-radius: 2px;
+      border: none;
+      color: var(--primary-text-color);
+      background-color: var(--header-bg-color);
+
+      &:focus {
+        outline: none;
+      }
+      }
+      
     }
-  }
+  
   
