feat: Add a spinner feature and redirect file

--- a/src/app/components/country-card/country-card.component.html
+++ b/src/app/components/country-card/country-card.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="loading$ | async" class="loading">Loading countries...</div>
+<!-- <div *ngIf="loading$ | async" class="loading">Loading countries...</div> -->
+<app-spinner *ngIf="loading$ | async"></app-spinner>
 
 <section class="country-list" *ngIf="countries$ | async as countries">
   <ng-container *ngIf="countries.length > 0; else noCountries">
