--- a/src/app/components/country-details/country-details.component.html
+++ b/src/app/components/country-details/country-details.component.html
@@ -6,29 +6,29 @@
       <h1>{{ country.name.common }}</h1>
       <div class="details-info">
         <div class="details">
-            <p><strong>Native Name:</strong> {{ country.name.common }}</p>
-            <p><strong>Population:</strong> {{ country.population | number }}</p>
-            <p><strong>Region:</strong> {{ country.region }}</p>
-            <p><strong>Subregion:</strong> {{ country.subregion }}</p>
-            <p><strong>Capital:</strong> {{ country.capital?.[0] || "N/A" }}</p>
-          </div>
-    
-          <div class="more-details">
-            <p>
-              <strong>Top Level Domain:</strong>
-              {{ country.tld ? country.tld.join(", ") : "N/A" }}
-            </p>
-    
-            <p>
-              <strong>Currencies:</strong>
-              {{ country.currencies | objectValues: "currencies" }}
-            </p>
-    
-            <p>
-              <strong>Languages:</strong>
-              {{ country.languages | objectValues }}
-            </p>
-          </div>
+          <p><strong>Native Name:</strong> {{ country.name.common }}</p>
+          <p><strong>Population:</strong> {{ country.population | number }}</p>
+          <p><strong>Region:</strong> {{ country.region }}</p>
+          <p><strong>Subregion:</strong> {{ country.subregion }}</p>
+          <p><strong>Capital:</strong> {{ country.capital?.[0] || "N/A" }}</p>
+        </div>
+
+        <div class="more-details">
+          <p>
+            <strong>Top Level Domain:</strong>
+            {{ country.tld ? country.tld.join(", ") : "N/A" }}
+          </p>
+
+          <p>
+            <strong>Currencies:</strong>
+            {{ country.currencies | objectValues: "currencies" }}
+          </p>
+
+          <p>
+            <strong>Languages:</strong>
+            {{ country.languages | objectValues }}
+          </p>
+        </div>
       </div>
 
       <div class="border" *ngIf="country.borders?.length">
@@ -46,5 +46,5 @@
   </div>
 </div>
 <ng-template #loading>
-  <p>Loading country details...</p>
+  <app-spinner *ngIf="loading$ | async"></app-spinner>
 </ng-template>
