--- a/src/app/components/country-card/country-card.component.scss
+++ b/src/app/components/country-card/country-card.component.scss
@@ -1,5 +1,5 @@
-@use '../../../styles/variables' as *;
-@use '../../../styles/mixins' as *;
+@use "../../../styles/variables" as *;
+@use "../../../styles/mixins" as *;
 
 .country-list {
   display: grid;
@@ -49,16 +49,15 @@
 }
 
 .no-results {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: var(--primary-text-color);
-    padding: 1rem;
-    font-size: 1.25rem;
-    font-weight: 300;
-    width: 100%;
-    max-width: 400px;
-  }
-  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: var(--primary-text-color);
+  padding: 1rem;
+  font-size: 1.25rem;
+  font-weight: 300;
+  width: 100%;
+  max-width: 400px;
+}
