--- a/src/app/components/country-details/country-details.component.scss
+++ b/src/app/components/country-details/country-details.component.scss
@@ -70,16 +70,15 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        
+
         .border-countries {
-            display: flex;
-            flex-direction: row;
-            gap: 0.5rem;
-            flex-wrap: wrap;
+          display: flex;
+          flex-direction: row;
+          gap: 0.5rem;
+          flex-wrap: wrap;
         }
+      }
     }
-    }
-    
 
     // Desktop styles
     @media (min-width: 768px) {
@@ -99,7 +98,8 @@
           flex-direction: row;
           gap: 2.5rem;
 
-          .more-details, .details {
+          .more-details,
+          .details {
             gap: 0.4rem;
             line-height: 1.5rem;
           }
