chore: remove environment files from tracking

--- a/src/app/components/country-details/country-details.component.scss
+++ b/src/app/components/country-details/country-details.component.scss
@@ -28,7 +28,7 @@
 
   .country-info {
     display: flex;
-    flex-direction: column; // Mobile first
+    flex-direction: column; 
     gap: 2.5rem;
     width: 100%;
 
